# youtube-analytics-project

./: pyproject.toml  requirements.txt
.run/: main.run.xml
homework-2/: moscowpython.json
src/: channel.py  playlist.py  video.py
