[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["alexandr <6ykva.izh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
build = "^1.0.3"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
